changed photos for mobile version fixed transitioning alignment issues

--- a/less/Home.less
+++ b/less/Home.less
@@ -12,7 +12,7 @@ header{
     color: #FFFFFF;
     transform: translate(60px, -280px); 
 
-    @media(max-width: 320px){
+    @media(max-width: 600px){
         font-size: 3.2rem; 
         line-height: 1.2; 
         transform:translate(20px, -140px); 
@@ -25,20 +25,17 @@ header{
     .section-align;
     line-height: 1.3; 
 
-    @media(max-width:320px){
+    @media(max-width: 600px){
         margin-top: -50px; 
         flex-wrap: wrap-reverse; 
         justify-content: center; 
-        padding: 15px; 
-        width: 98%; 
+        width: 100%;  
     }
 
     .row-image{
 
-        @media(max-width: 320px){
-            margin-top: -40px; 
-            width: 100%; 
-            padding-bottom: 20px; 
+        @media(max-width: 400px){
+            margin-top: -40px;  
         }
     }
 
@@ -49,27 +46,26 @@ header{
         padding-right: 30px;  
         .content-align;
 
-        @media(max-width:320px){
+        @media(max-width:600px){
             width: 100%; 
-            padding-right: 0px; 
+            padding: 15px;  
             justify-content: center; 
-        }
+            }
         
         h1{
             font-weight:bold;
             padding-bottom: 12px; 
 
-            @media(max-width:320px){
-                width: 100%; 
-                
+            @media(max-width:400px){
+                width: 100%;  
             }
         }
 
         .button1{
            .button-1; 
 
-           @media(max-width: 320px){
-               width: 85%; 
+           @media(max-width: 400px){
+               width: 90%; 
            }
         }
     }
@@ -80,11 +76,11 @@ header{
     .section-align; 
     flex-direction: row-reverse; 
 
-    @media(max-width: 320px){
-        padding-top: 20px; 
+    @media(max-width: 400px){ 
         flex-wrap: wrap-reverse; 
         justify-content: center; 
-        padding: 15px; 
+        padding-top: 20px; 
+        width: 100%; 
     }
 
     .futuristic-designs{
@@ -92,8 +88,12 @@ header{
         .content-align;  
         padding-left: 60px;  
 
-        @media(max-width: 320px){
-            padding-left: 0px; 
+        @media(max-width: 819px){
+            padding-bottom: 40px; 
+        }
+
+        @media(max-width: 600px){
+            padding: 0px;  
             width: 100%; 
         }
 
@@ -101,15 +101,16 @@ header{
             font-weight: bold; 
             padding-bottom: 20px; 
 
-            @media(max-width: 320px){
+            @media(max-width: 400px){
                 padding-top: 15px; 
+                width: 100%; 
             }
         }
         
         .button1{
             .button-1; 
 
-            @media(max-width: 320px){
+            @media(max-width: 400px){
                 width: 85%; 
             }
         }
@@ -117,11 +118,11 @@ header{
 }
  
 .row3{
-    width: 90%; 
+    width: 90%;  
     padding-top: 80px; 
     margin: auto; 
 
-    @media(max-width: 320px){
+    @media(max-width: 400px){
         padding-top: 20px; 
         width: 100%; 
     }
@@ -130,17 +131,17 @@ header{
         padding-bottom: 50px; 
         font-weight: bold; 
 
-        @media(max-width: 320px){
+        @media(max-width: 400px){
             padding-bottom: 20px; 
+            padding-left: 15px; 
         }
     }
 
     .row3-img{
-        width: 100%; 
         margin: auto; 
-
-        @media(max-width: 320px){
-            height: 200px; 
+        width: 100%; 
+        @media(min-width: 400px){
+            width: 100%;
         }
     }
 
@@ -153,9 +154,10 @@ header{
           .image-banner; 
           letter-spacing: 7px;  
 
-          @media(max-width: 320px){
+          @media(max-width: 400px){
              transform: translate(0px, -25px);
              width: 95%; 
+             margin: auto; 
           }
     }
     .row3-content{
@@ -171,7 +173,7 @@ header{
             line-height: 1.4; 
             padding-bottom: 80px; 
 
-            @media(max-width: 320px){
+            @media(max-width: 600px){
                 width: 100%; 
                 padding: 10px; 
             }
@@ -183,7 +185,7 @@ header{
     width: 90%; 
     margin: auto; 
 
-    @media(max-width: 320px){
+    @media(max-width: 400px){
         padding-top: 20px; 
         width: 100%; 
     }
@@ -191,7 +193,7 @@ header{
     .row4-img{
         width: 100%; 
 
-        @media(max-width: 320px){
+        @media(max-width: 400px){
             height: 200px; 
         }
     }
@@ -204,7 +206,7 @@ header{
           .image-banner; 
           letter-spacing: 7px; 
 
-          @media(max-width: 320px){
+          @media(max-width: 400px){
             transform: translate(0px, -25px);
             width: 95%;
             margin: auto; 
@@ -224,7 +226,7 @@ header{
             line-height: 1.4; 
             padding-bottom: 80px; 
 
-            @media(max-width: 320px){
+            @media(max-width: 600px){
                 width: 100%; 
                 padding: 10px; 
             }
@@ -235,7 +237,7 @@ header{
      width: 90%; 
      margin: auto; 
 
-     @media(max-width: 320px){
+     @media(max-width: 400px){
         padding-top: 20px; 
         width: 100%; 
     }
@@ -243,7 +245,7 @@ header{
     .row5-img{
         width: 100%; 
 
-        @media(max-width: 320px){
+        @media(max-width: 400px){
             height: 200px; 
         }
     }
@@ -257,7 +259,7 @@ header{
           .image-banner; 
           letter-spacing: 7px; 
 
-          @media(max-width: 320px){
+          @media(max-width: 400px){
             transform: translate(0px, -25px);
             width: 95%;
             margin: auto; 
@@ -276,9 +278,10 @@ header{
             line-height: 1.4; 
             padding-bottom: 80px; 
 
-            @media(max-width: 320px){
+            @media(max-width: 600px){
                 width: 100%; 
                 padding: 10px; 
+                padding-bottom: 60px; 
             }
         }
     }
