--- a/less/Nav.less
+++ b/less/Nav.less
@@ -3,7 +3,7 @@ nav {
     .flex; 
     justify-content: space-between;
     width: 100%; 
-    font-size: @navFontSize; 
+    font-size: @navFontSize;  
 
     .nav-logo{
         font-weight: bold;
@@ -18,6 +18,10 @@ nav {
 
     .hamburger{
         padding-right: 50px; 
+
+        @media(max-width: 400px){
+            padding: 0px; 
+        }
     }
 
     .navbar-menu{
@@ -28,6 +32,10 @@ nav {
         color: white; 
         text-decoration: none; 
         padding-left: 50px; 
+        
+        @media(max-width: 400px){
+          padding: 0px;  
+        }
 
     }
 }
@@ -36,12 +44,12 @@ nav {
 
 footer{
     .flex; 
-    width: 100%;
+    width: 98%;
     background-color: #828282;
     justify-content: space-around;
     padding: 70px 10px 15px 10px; 
 
-    @media(max-width: 320px){
+    @media(max-width: 400px){
         flex-direction: column; 
         justify-content: center; 
         align-items: flex-start; 
@@ -66,7 +74,7 @@ footer{
         line-height: 1.7;
         padding-left: 30px; 
 
-        @media(max-width:360px){
+        @media(max-width:400px){
            width: 97%; 
            padding-left: 0px; 
         }
@@ -82,8 +90,9 @@ footer{
         line-height: 1.8; 
         font-size: 1.3rem; 
         color: #ffffff; 
+        
 
-        @media(max-width: 320px){
+        @media(max-width: 400px){
             width: 95%; 
             padding-top: 22px; 
         }
