--- a/less/index.less
+++ b/less/index.less
@@ -66,10 +66,12 @@ table{
 
 html{
   font-size: 65%; 
+  background-color: black; 
 }
 
 body{
   max-width: 1000px;  
+  background-color: white; 
   margin: 0 auto; 
   width: 100%; 
   font-family: Roboto, Arial, sans-serif
